fixed spacing on image gallery again (smaller gap). Also added Reviews to the Kits.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1137,7 +1137,7 @@ a:focus,.focus a{
 				&.woocommerce-product-gallery--columns-4{
 					.flex-control-nav{
 						&.flex-control-thumbs{
-							margin: 50px 0;
+							margin: 25px 0;
 							align-items: space-between;
 							li{
 								float: none !important;
